Force font size to avoid zoom on iOS search box

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,6 @@ a:visited {
   select,
   textarea,
   input {
-    font-size: 16px;
+    font-size: 16px !important;
   }
 }
